# yelp-review-agentic-analysis

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: chain-of-thought-vs-direct.ipynb  data-ingestion.ipynb  multi-objective-ai-assistant.ipynb  zero-vs-few-shot.ipynb
