[project]
name = "prodigal-assignment-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-ai-inference>=1.0.0b9",
    "openai>=1.106.1",
    "polars>=1.33.0",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "polars>=1.33.0",
    "scikit-learn>=1.7.1",
]
